Limit memory of daemons used in tests
By default they were taking 1/4th of the machine's memory
which is excessive. 4GB for a shared daemon and 1GB for a
test-specific daemon should be more than enough.