@@ -15,9 +15,6 @@
  */
 package org.gradle.integtests.fixtures.executer;
 
-import org.gradle.api.JavaVersion;
-import org.gradle.internal.jvm.Jvm;
-import org.gradle.internal.jvm.inspection.JvmVersionDetector;
 import org.gradle.internal.nativeintegration.services.NativeServices;
 import org.gradle.test.fixtures.file.TestDirectoryProvider;
 import org.gradle.util.GradleVersion;
@@ -29,7 +26,6 @@ import static java.util.Arrays.asList;
 import static org.apache.commons.collections.CollectionUtils.containsAny;
 
 public class DaemonGradleExecuter extends NoDaemonGradleExecuter {
-    private static final JvmVersionDetector JVM_VERSION_DETECTOR = GLOBAL_SERVICES.get(JvmVersionDetector.class);
 
     private boolean daemonExplicitlyRequired;
 
@@ -75,24 +71,6 @@ public class DaemonGradleExecuter extends NoDaemonGradleExecuter {
         }
 
         return args;
-    }
-
-    @Override
-    protected List<String> getImplicitBuildJvmArgs() {
-        if (!isUseDaemon() || !isSharedDaemons()) {
-            return super.getImplicitBuildJvmArgs();
-        }
-
-        // Add JVM heap settings only for shared daemons
-        List<String> buildJvmOpts = new ArrayList<String>(super.getImplicitBuildJvmArgs());
-
-        if (JVM_VERSION_DETECTOR.getJavaVersion(Jvm.forHome(getJavaHome())).compareTo(JavaVersion.VERSION_1_8) < 0) {
-            buildJvmOpts.add("-XX:MaxPermSize=320m");
-        }
-
-        buildJvmOpts.add("-XX:+HeapDumpOnOutOfMemoryError");
-        buildJvmOpts.add("-XX:HeapDumpPath=" + buildContext.getGradleUserHomeDir().getAbsolutePath());
-        return buildJvmOpts;
     }
 
     @Override
